--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cpf_cnpj_validator
-description: A lib to validate CPF and CNPJ numbers.
-version: 1.0.3
+description: A lib to validate, format, strip and generate CPF and CNPJ numbers from Brazil.
+version: 1.0.4
 author: Leonardo Caldas <leonardo.ferreira.caldas@gmail.com>
 homepage: https://github.com/leonardocaldas/flutter-cpf-cnpj-validator
 
