migrated to nullsafety

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,10 +1,11 @@
 name: example
 description: An example of how to use Flutter plugin CPF&#x2F;CNPJ validator.
+publish_to: 'none' #Remove this line if you wish to publish in pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
