--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: cpf_cnpj_validator
 description: A lib to validate, format, strip and generate CPF and CNPJ numbers from Brazil.
-version: 1.0.5
+version: 2.0.0-nullsafety
 author: Leonardo Caldas <leonardo.ferreira.caldas@gmail.com>
 homepage: https://github.com/leonardocaldas/flutter-cpf-cnpj-validator
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
