Adicionada compatibilidade com Null-Safety e Flutter 2.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,10 +1,11 @@
 name: example
 description: An example of how to use Flutter plugin CPF&#x2F;CNPJ validator.
 
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=2.0.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -12,7 +13,7 @@ dependencies:
   cpf_cnpj_validator:
     path: ../
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
