--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: cpf_cnpj_validator
 description: A lib to validate, format, strip and generate CPF and CNPJ numbers from Brazil.
-version: 1.0.5
-author: Leonardo Caldas <leonardo.ferreira.caldas@gmail.com>
-homepage: https://github.com/leonardocaldas/flutter-cpf-cnpj-validator
+version: 2.0.0
+author: Pedro Henrique <intellitour@gmail.com> forking and upgrading from Leonardo Caldas <leonardo.ferreira.caldas@gmail.com>
+homepage: https://github.com/intellitour/flutter-cpf-cnpj-validator
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=2.0.0 <3.0.0'
 
 dependencies:
   flutter:
